# battery_estimator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp  main.h
Modules/: AbstractBatteryEstimation.h  AbstractError.h  AdvancedBatteryEstimation.cpp  AdvancedBatteryEstimation.h  CMakeLists.txt  Helper.cpp  Helper.h  NaiveBatteryEstimation.cpp  NaiveBatteryEstimation.h  SimpleBatteryEstimation.cpp  SimpleBatteryEstimation.h
Test/: AdvancedEstimation_test.cpp  CMakeLists.txt  NaiveEstimation_test.cpp  SimpleEstimation_test.cpp
